# TrafficRL

./: .gitignore  OVERVIEW.md  README.md  pyproject.toml
config/: city_medium.yaml  city_small.yaml  reward_default.yaml
docs/: ALGORITMOS.md  SIMULACION.md
rl/agents/centralized/: ppo_agent.py
rl/agents/hrl/: manager.py  worker.py
rl/agents/marl/: ippo_agent.py
rl/benchmark/: metrics.py  report.py  runners.py  statistical.py
rl/demo/: controllers.py
rl/env/: bridge_client.py  data_types.py  marl_env.py  reward.py  spaces.py  traffic_env.py
rl/models/: gnn.py
rl/results/: benchmark_city_small.csv  benchmark_city_small.json
rl/training/: benchmark.py  evaluate.py  train.py  train_hrl.py  train_ippo.py
scripts/: benchmark.sh  cleanup_shm.sh  open_dashboard.sh  run.sh  setup_wsl.sh  train_all.sh  train_hrl.sh  train_ippo.sh  train_ppo.sh
simulation/: CMakeLists.txt
simulation/src/: main_server.cpp
simulation/src/bridge/: bridge_server.cpp  bridge_server.hpp  shared_memory_layout.hpp
simulation/src/city/: city_graph.cpp  city_graph.hpp  spawn_manager.cpp  spawn_manager.hpp
simulation/src/core/: math_utils.hpp  spatial_hash.hpp  types.hpp
simulation/src/events/: event_scheduler.cpp  event_scheduler.hpp  event_types.hpp
simulation/src/simulation/: simulation_loop.cpp  simulation_loop.hpp  traffic_light_system.cpp  traffic_light_system.hpp
simulation/src/vehicles/: idm.hpp  personality_dynamics.hpp  personality_generator.hpp  vehicle_pool.cpp  vehicle_pool.hpp
simulation/tests/cpp/: test_city.cpp  test_events.cpp  test_idm.cpp  test_simulation.cpp
tests/python/: test_benchmark.py  test_env_basic.py  test_marl.py  test_shared_memory.py
webviz/: server.py  session.py
webviz/static/: app.js  compare.html  index.html
